# citation_suggester_tool

./: .env.example  .gitignore  README.md  pyproject.toml
citation_suggester/: __init__.py  __main__.py  config.py  manuscript.py  models.py  pipeline.py  query_generation.py  ranker.py  semantic_scholar.py
config/: citation_suggester.yaml
