[project]
name = "rag-coding"
version = "0.1.0"
description = "learning how to use rag architecture."
authors = [
    {name = "DevL",email = "dvora.leibowitz@gmail.com"}
]
requires-python = ">=3.12,<4.0.0"
dependencies = [
    "pandas (>=3.0.1,<4.0.0)",
    "numpy (>=2.4.2,<3.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "langchain (>=1.2.10,<2.0.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "langchain-chroma (>=1.1.0,<2.0.0)",
    "chromadb (>=1.5.1,<2.0.0)",
    "pymupdf (>=1.27.1,<2.0.0)",
    "ipywidgets (>=8.1.8,<9.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "langchain-google-genai (>=2.0,<3.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "httpx (>=0.28.0,<0.29.0)",
    "pyyaml (>=6.0.0,<7.0.0)",
    "sentence-transformers (>=3.0.0,<4.0.0)"
]

[project.scripts]
cite-suggest = "citation_suggester.__main__:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{ include = "citation_suggester" }]

[tool.poetry.group.dev.dependencies]
ipykernel = "^7.2.0"

